--- a/css/main.css
+++ b/css/main.css
@@ -6,11 +6,10 @@ img {
     width: 100%;
     border-radius: 5px;
     opacity:0.8;
-    filter: grayscale(50%);
+    filter: grayscale(30%)
 }
-h1 {
-    color: #333;
-    font-size:2.5rem;
+h1, h2, h3 {
+    color: #04ec17;
     font-weight: bold;
     text-decoration: underline;
 }
