--- a/css/main.css
+++ b/css/main.css
@@ -9,7 +9,7 @@ img {
     filter: grayscale(30%)
 }
 h1, h2, h3 {
-    color: #04ec17;
+    color: #9f0bc4;
     font-weight: bold;
     text-decoration: underline;
 }
